@startuml

class Solution41{
    'Methods
    +main(String)
}

class NameSorter{
    'Attributes
    -listNames: List<String>

    'Methods
    'Creates sorted name list
    +createNameList(File input)
    'Adds elements to output string
    +createOutput(): String output
}

class MyFileReader{
    'Attributes (List to return to NameSorter)
    -listNames: List<String> list

    'Methods
    'Adds elements to listNames from input file
    +scanInputFile(File inputFileName): List<String> list
}

class MyFileWriter{
    'Methods
    'Writes string to output file
    +writeToFile(String output)
}

class FilePathCreator{
    'Methods
    'Creates a path to a file, then returns that file
    +createFilePath(String fileName): File file
}

Solution41--NameSorter
Solution41--MyFileWriter
MyFileReader o-- FilePathCreator
MyFileWriter o-- FilePathCreator
NameSorter o-- MyFileReader
@enduml